<resources>
    <string name="app_name">Where Are You</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attention_msg">Attention!</string>
    <string name="permissions_request_introduction_title">Permissions required</string>
    <string name="permissions_request_introduction_msg">Now you will be asked for permissions, without which the application will not be able to work. Please confirm all requested permissions.</string>
    <string name="permissions_request_epilogue_title">Permissions required</string>
    <string name="permissions_request_epilogue_msg">Please accept all requested permissions. Without them, the application can not work.</string>
    <string name="permissions_request_epilogue_ok_btn">Grant permissions</string>
    <string name="permissions_request_epilogue_cancel_btn">No, exit the app</string>
    <string name="no_gps_signal_msg">No GPS data available</string>
    <string name="gps_provider_off_msg">GPS is disabled. Turn on the GPS!</string>
    <string name="satellite_quan_msg">Satellites: %1$d</string>
    <string name="gps_fix_msg">Fix</string>
    <string name="gps_start_msg">Searching...</string>
    <string name="gps_status_label">GPS-status:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="accuracy_label">Accuracy (m):</string>
    <string name="altitude_label">Altitude (m):</string>
    <string name="speed_label">Speed (km/h):</string>
    <string name="last_time_label">Last time:</string>
    <string name="itsme_msg">It\'s me!</string>
    <string name="gps_provider_on_msg">GPS is enabled</string>
    <string name="send_location_screen_title">Location sending</string>
    <string name="comment_label">Comment:</string>
    <string name="recipient_label">Recipient (phone number):</string>
    <string name="contactListBtn_label">Contacts</string>
    <string name="sendLocationBtn_label">Send</string>
    <string name="toSendLocationScreenBtn_label">Send</string>
    <string name="make_request_cbox_label">Request the recipient\'s location</string>
    <string name="receiver_screen_request_title">Incoming request for your location from outside</string>
    <string name="receiver_screen_info_title">Location received</string>
    <string name="location_request_screen_header">" Abonent location request"</string>
    <string name="sendAnswerBtn_label">Inform</string>
    <string name="cancelAnswerBtn_label">Cancel</string>
    <string name="show_scope_label">Show:</string>
    <string name="meScopeBtn_label">Me</string>
    <string name="abonentScopeBtn_label">Abonent</string>
    <string name="togetherScopeBtn_label">Both</string>
    <string name="receiver_screen_answer_title">Received a response to your location request</string>
    <string name="receiver_screen_define_title">Determining your location</string>
    <string name="receiver_screen_default_comment">I\'m here</string>
    <string name="sendRequestBtn_label">Request</string>
    <string name="request_screen_default_comment">Where are you?</string>
    <string name="notification_channel_name">Where Are You app messages</string>
    <string name="notification_channel_description">Receiving requests for your location from other users</string>
    <string name="notification_content_text">Urgent message about the location of that person!</string>
    <string name="distance_label">Distance:</string>
    <string name="start_phone_shablon">+</string>
</resources>