<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    tools:context=".view.ReceiverFragment">

    <TextView
        android:id="@+id/screenHeaderTv"
        style="@style/CommonScreenHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/receiver_screen_request_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/abonentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@color/light_blue_600"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenHeaderTv"
        tools:text="Абонент" />

    <TextView
        android:id="@+id/commentTv"
        style="@style/CommonValueStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abonentTv"
        tools:text="Комментарий" />

    <!--<com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"-->

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/abonentBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="abonentTv,commentTv"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="89dp" />

    <Button
        android:id="@+id/sendAnswerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/sendAnswerBtn_label"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintEnd_toStartOf="@+id/cancelAnswerBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiverMap" />

    <Button
        android:id="@+id/cancelAnswerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/cancelAnswerBtn_label"
        app:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sendAnswerBtn"
        app:layout_constraintTop_toBottomOf="@+id/receiverMap" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/actionButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="sendAnswerBtn,cancelAnswerBtn"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/statusGpsTv"
        style="@style/CommonValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        tools:text="@string/gps_start_msg" />

    <ProgressBar
        android:id="@+id/gpsProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="13dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/statusGpsTv"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/receiverMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/frame_style"
        android:padding="4dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:visibility="visible">

    </androidx.fragment.app.FragmentContainerView>

    <TextView
        android:id="@+id/textView14"
        style="@style/CommonLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gps_status_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gpsStatusGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="textView14,statusGpsTv,gpsProgressBar"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/scopeTextView12"
        style="@style/CommonLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/show_scope_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abonentBarrier" />

    <Button
        android:id="@+id/meScopeBtn"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/meScopeBtn_label"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/scopeTextView12"
        app:layout_constraintTop_toBottomOf="@id/abonentBarrier" />

    <Button
        android:id="@+id/senderScopeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/abonentScopeBtn_label"
        android:textSize="10sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/meScopeBtn"
        app:layout_constraintTop_toBottomOf="@id/abonentBarrier" />

    <Button
        android:id="@+id/togetherScopeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/togetherScopeBtn_label"
        android:textSize="10sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/senderScopeBtn"
        app:layout_constraintTop_toBottomOf="@id/abonentBarrier" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="Автопоиск себя"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abonentBarrier" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/scopeButtonsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="scopeTextView12,meScopeBtn,senderScopeBtn,togetherScopeBtn"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/distanceLabel"
        style="@style/CommonLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/distance_label"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/gpsProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/distanceTv"
        style="@style/CommonValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/distanceLabel"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        tools:text="980 м"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>